# vertminer-gpu

./: API-README  Makefile  Makefile.am  Makefile.in  README  adnminer.c  config.h  config.status  configure  configure.ac  driver-opencl.c  driver-opencl.h  libtool  miner.h  ocl.c  scrypt.c  vertminer.c
.deps/: vertminer-adl.Po  vertminer-api.Po  vertminer-driver-opencl.Po  vertminer-findnonce.Po  vertminer-logging.Po  vertminer-ocl.Po  vertminer-scrypt.Po  vertminer-sha2.Po  vertminer-util.Po  vertminer-vertminer.Po
autom4te.cache/: output.0  traces.0
ccan/: Makefile
compat/: Makefile
lib/: Makefile
